styles.css
:root {
  /** Color Palette */
  --white: #e0e0e0;
  --black: #121212;

  /* Light theme variables (default) */
  --bg-color: var(--white);
  --text-color: var(--black);
}

@media (prefers-color-scheme: dark) {
  :root {
    /* Dark theme variables */
    --bg-color: var(--black);
    --text-color: var(--white);
  }
}

body {
  background-color: var(--bg-color);
  color: var(--text-color);
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
}

/*make the footer always at the bottom*/
html, body {
  height: 100%;
  margin: 0;
}

#app {
  min-height: 100%;
  display: flex;
  flex-direction: column;
}

main {
  flex: 1; /* Pushes the footer down */
}

#game {
  display: block;
  width: 100%;
  height: 100vh;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background: radial-gradient(circle at top, #ff4fa2 0%, #1a0f40 25%, #06010e 55%, #02010b 100%);
}

canvas {
  display: block;
  width: 100%;
  height: 100%;
  background: transparent;
}

#start-button {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 1em 2em;
  font-size: 1.5em;
  background-color: var(--text-color);
  color: var(--bg-color);
  border: none;
  border-radius: 8px;
  cursor: pointer;
  background-color: #02010b;
  color: #e0e0e0;
  border:#ff4fa2 2px solid;
  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
}

